--- a/A100/mistral-7b-neurips-v2/Dockerfile
+++ b/A100/mistral-7b-neurips-v2/Dockerfile
@@ -9,8 +9,8 @@ WORKDIR /workspace
 COPY ./fast_api_requirements.txt fast_api_requirements.txt
 RUN pip install --no-cache-dir --upgrade -r fast_api_requirements.txt
 
-ENV HUGGINGFACE_TOKEN="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"
-ENV HUGGINGFACE_REPO="quyanh/mistral-7b-neurips-v2"
+ENV HUGGINGFACE_TOKEN=""
+ENV HUGGINGFACE_TOKEN="knovel/mistral-7b-neurips-v2"
 
 # Copy over single file server
 COPY ./main.py main.py
